edited/removed unnecessary code from template

--- a/Controller/.env
+++ b/Controller/.env
@@ -1,1 +1,3 @@
 DATABASE_URL="mongodb://rootuser:example@127.0.0.1:27017/database?authSource=admin"
+SESSION_SECRET="secret"
+ACCOUNT_CREATION_KEY="secretkey"
